# robot_snake

./: README.md  mas  notes.txt  robot_snake  robot_snake.pub  tens  tension_offsets.txt  timingfile.txt
RLSencoder2/: RLSencoder2.cpp  RLSencoder2.h
bag_files/11_02_2023 12:12:02/: metadata.yaml
bag_files/15_12_2022 11:36:15/: 15_12_2022 11:36:15_0.db3  metadata.yaml
bag_files/15_12_2022 14:04:54/: 15_12_2022 14:04:54_0.db3  metadata.yaml
bag_files/15_12_2022 14:06:45/: 15_12_2022 14:06:45_0.db3  metadata.yaml
bag_files/15_12_2022 14:07:45/: 15_12_2022 14:07:45_0.db3  metadata.yaml
bag_files/15_12_2022 14:12:24/: 15_12_2022 14:12:24_0.db3  metadata.yaml
bag_files/15_12_2022 14:13:14/: 15_12_2022 14:13:14_0.db3  metadata.yaml
bag_files/15_12_2022 14:14:03/: 15_12_2022 14:14:03_0.db3  metadata.yaml
bag_files/15_12_2022 14:18:20/: 15_12_2022 14:18:20_0.db3  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/package1/: CMakeLists.txt
src/package1/arduino/MOTOR_CONTROL_MC/: MOTOR_CONTROL_MC.ino
src/package1/arduino/SNAKE_MASTER_NEW/: SNAKE_MASTER_NEW.ino
src/package1/arduino/SNAKE_MASTER_OLD/: SNAKE_MASTER_OLD.ino
src/package1/arduino/SNAKE_SLAVE/: SNAKE_SLAVE.ino
src/package1/arduino/TENSION_VALUES_MC/: TENSION_VALUES_MC.ino
src/package1/config/: node1_con.yaml
src/package1/launch/: launch1.py  m_r_launch.py
src/package1/src/: node1.cpp  node2.cpp
(+31 files in other folders)
